crates/ridge-codegen-erl/tests/snapshots/core_ast_snapshot__pipe_simple.snap
---
source: crates/ridge-codegen-erl/tests/core_ast_snapshot.rs
expression: "&cerl_module"
---
CErlModule {
    name: CErlAtom(
        "ridge_module_0",
    ),
    exports: [],
    attributes: [
        CErlAttribute {
            name: CErlAtom(
                "ridge_meta",
            ),
            value: Tuple(
                [
                    Lit(
                        Atom(
                            CErlAtom(
                                "ridge_meta_v1",
                            ),
                        ),
                    ),
                    Lit(
                        Atom(
                            CErlAtom(
                                "ridge_module_0",
                            ),
                        ),
                    ),
                    ListLit(
                        [],
                    ),
                    ListLit(
                        [],
                    ),
                ],
            ),
        },
    ],
    fns: [
        CErlFn {
            name: CErlAtom(
                "add1",
            ),
            arity: 1,
            anns: [
                CErlAnn(
                    "%% File: <source>, Offset: 0",
                ),
                CErlAnn(
                    "%% Caps: {}",
                ),
            ],
            body: Fun {
                params: [
                    CErlVar(
                        "V_X",
                    ),
                ],
                body: Call {
                    module: CErlAtom(
                        "erlang",
                    ),
                    fn_name: CErlAtom(
                        "+",
                    ),
                    args: [
                        Var(
                            CErlVar(
                                "V_X",
                            ),
                        ),
                        Lit(
                            Int(
                                1,
                            ),
                        ),
                    ],
                },
            },
        },
        CErlFn {
            name: CErlAtom(
                "double",
            ),
            arity: 1,
            anns: [
                CErlAnn(
                    "%% File: <source>, Offset: 33",
                ),
                CErlAnn(
                    "%% Caps: {}",
                ),
            ],
            body: Fun {
                params: [
                    CErlVar(
                        "V_X",
                    ),
                ],
                body: Call {
                    module: CErlAtom(
                        "erlang",
                    ),
                    fn_name: CErlAtom(
                        "*",
                    ),
                    args: [
                        Var(
                            CErlVar(
                                "V_X",
                            ),
                        ),
                        Lit(
                            Int(
                                2,
                            ),
                        ),
                    ],
                },
            },
        },
        CErlFn {
            name: CErlAtom(
                "pipe_simple",
            ),
            arity: 1,
            anns: [
                CErlAnn(
                    "%% File: <source>, Offset: 68",
                ),
                CErlAnn(
                    "%% Caps: {}",
                ),
            ],
            body: Fun {
                params: [
                    CErlVar(
                        "V_X",
                    ),
                ],
                body: Apply {
                    callee: LocalFnRef {
                        name: CErlAtom(
                            "add1",
                        ),
                        arity: 1,
                    },
                    args: [
                        Var(
                            CErlVar(
                                "V_X",
                            ),
                        ),
                    ],
                },
            },
        },
    ],
}
